--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,12 @@ jobs:
           java-version: '17'
           java-package: jdk+fx
 
+      - name: Gradle Primer
+        run: ./gradlew
+
+      - name: Check formatting with Gradle
+        run: ./gradlew spotlessCheck
+
       - name: Build and check with Gradle
         run: ./gradlew check coverage
 
